--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -19,3 +19,17 @@
     border-radius: 8px;
     background-image: linear-gradient(145deg,#f1c40f,#e67e22);
 }
+
+.buy-btn{
+    width: 150px;
+    background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
